--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "esbuild-plugin-sass": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.25.3",
     "react-icons": "^4.3.1",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
